--- a/deployments/banklo-authorizer/templates/destinationrule.yaml
+++ b/deployments/banklo-authorizer/templates/destinationrule.yaml
@@ -12,6 +12,10 @@ spec:
       http:
         http1MaxPendingRequests: 10
         maxRequestsPerConnection: 100
+    outlierDetection:
+      consecutive5xxErrors: 10
+      interval: 5m
+      baseEjectionTime: 15m
   subsets:
     - name: v1
       labels:
